# wasm-data-aggregator

./: Cargo.toml  README.md  package-lock.json  package.json  project.json
src/: aggregation.rs  decay.rs  filtering.rs  lib.rs
