[package]
name = "affectively-data-aggregator"
version = "1.0.0"
authors = ["AFFECTIVELY <opensource@affectively.ai>"]
edition = "2021"
license = "MIT"
description = "High-performance data aggregation for WebAssembly - statistics, grouping, time-series"
repository = "https://github.com/affectively-ai/wasm-data-aggregator"
keywords = ["wasm", "data", "aggregation", "statistics"]
categories = ["data-structures", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "s"
